--- a/apache-magento-tracker/conf/vhosts.conf
+++ b/apache-magento-tracker/conf/vhosts.conf
@@ -1,12 +1,11 @@
 <VirtualHost *:80>
     ServerName DOMAIN
+    DocumentRoot "/var/www/"
 
-    DocumentRoot /var/www/
-
-    <Directory /var/www/>
-      AllowOverride None
-      Order allow,deny
-      Allow from all
+    <Directory /var/www>
+         Order allow,deny
+         Allow from all
+         Require all granted
     </Directory>
 
     RewriteEngine on
