Added Log Cleanning to Crontab

--- a/apache-magento-tracker/Dockerfile
+++ b/apache-magento-tracker/Dockerfile
@@ -11,4 +11,9 @@ COPY conf/httpd.conf /usr/local/apache2/conf/httpd.conf
 
 RUN chmod +x /usr/bin/start
 
+#Log Cleanning
+RUN crontab -l | { cat; echo "0 0 * * * :> /var/log/smile_searchandising_suite/apache_raw_events/magento.log"; } | crontab -
+
+CMD ['crond']
+
 ENTRYPOINT ["/usr/bin/start"]
