--- a/elastic-magento/es-conf-templates/elasticsearch.yml
+++ b/elastic-magento/es-conf-templates/elasticsearch.yml
@@ -377,3 +377,5 @@ discovery.zen.ping.unicast.hosts: [HOSTS]
 #monitor.jvm.gc.old.debug: 2
 
 script.disable_dynamic: false
+
+indices.fielddata.cache.size: 20%
