--- a/apache-magento-tracker/conf/httpd.conf
+++ b/apache-magento-tracker/conf/httpd.conf
@@ -173,6 +173,7 @@ LoadModule autoindex_module modules/mod_autoindex.so
 #LoadModule asis_module modules/mod_asis.so
 #LoadModule info_module modules/mod_info.so
 #LoadModule suexec_module modules/mod_suexec.so
+LoadModule mpm_event_module modules/mod_mpm_event.so
 <IfModule !mpm_prefork_module>
 	#LoadModule cgid_module modules/mod_cgid.so
 </IfModule>
